--- a/jsnack3/style.css
+++ b/jsnack3/style.css
@@ -1,17 +1,19 @@
+body{
+    background-color: rgb(0, 0, 0);
+}
+
 #results-container{
-    width: 500px;
+    width: 1000px;
     text-align: center;
     margin: 0 auto;
 }
 
 .red{
     color: rgb(255, 0, 0);
-    background-color: rgb(0, 0, 0);
 }
 
 .green{
     color: rgb(0, 255, 0);
-    background-color: rgb(255, 174, 0);
 }
 
 .red, .green{
